--- a/game-common/pom.xml
+++ b/game-common/pom.xml
@@ -27,5 +27,10 @@
     	<artifactId>game-agent</artifactId>
     	<version>${project.version}</version>
     </dependency>
+    <dependency>
+    	<groupId>io.netty</groupId>
+    	<artifactId>netty-all</artifactId>
+    	<version>4.1.6.Final</version>
+    </dependency>
   </dependencies>
 </project>
