--- a/game-common/pom.xml
+++ b/game-common/pom.xml
@@ -32,5 +32,15 @@
     	<artifactId>netty-all</artifactId>
     	<version>4.1.6.Final</version>
     </dependency>
+    <dependency>
+    	<groupId>org.xerial.snappy</groupId>
+    	<artifactId>snappy-java</artifactId>
+    	<version>1.1.2.6</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.google.protobuf</groupId>
+    	<artifactId>protobuf-java</artifactId>
+    	<version>3.4.0</version>
+    </dependency>
   </dependencies>
 </project>
