--- a/game-common/pom.xml
+++ b/game-common/pom.xml
@@ -42,5 +42,10 @@
     	<artifactId>protobuf-java</artifactId>
     	<version>3.4.0</version>
     </dependency>
+    <dependency>
+    	<groupId>dom4j</groupId>
+    	<artifactId>dom4j</artifactId>
+    	<version>1.6.1</version>
+    </dependency>
   </dependencies>
 </project>
