--- a/game-common/pom.xml
+++ b/game-common/pom.xml
@@ -47,5 +47,15 @@
     	<artifactId>dom4j</artifactId>
     	<version>1.6.1</version>
     </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>6.0.6</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.mybatis</groupId>
+    	<artifactId>mybatis</artifactId>
+    	<version>3.4.1</version>
+    </dependency>
   </dependencies>
 </project>
