--- a/game-common/pom.xml
+++ b/game-common/pom.xml
@@ -57,5 +57,10 @@
     	<artifactId>mybatis</artifactId>
     	<version>3.4.1</version>
     </dependency>
+    <dependency>
+    	<groupId>com.zaxxer</groupId>
+    	<artifactId>HikariCP</artifactId>
+    	<version>2.7.1</version>
+    </dependency>
   </dependencies>
 </project>
