--- a/game-common/src/main/resources/config.properties
+++ b/game-common/src/main/resources/config.properties
@@ -14,3 +14,12 @@ message.multi=1
 
 # all player a queue
 message.single=5
+
+jdbc.driver=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/db1
+jdbc.user=root
+jdbc.pwd=tjp
+jdbc.init=10
+jdbc.minIdle=10
+jdbc.maxActive=50
+jdbc.maxWait=60000
