--- a/game-common/pom.xml
+++ b/game-common/pom.xml
@@ -62,5 +62,10 @@
     	<artifactId>HikariCP</artifactId>
     	<version>2.7.1</version>
     </dependency>
+    <dependency>
+    	<groupId>redis.clients</groupId>
+    	<artifactId>jedis</artifactId>
+    	<version>2.9.0</version>
+    </dependency>
   </dependencies>
 </project>
