--- a/game-common/pom.xml
+++ b/game-common/pom.xml
@@ -67,5 +67,10 @@
     	<artifactId>jedis</artifactId>
     	<version>2.9.0</version>
     </dependency>
+    <dependency>
+    	<groupId>org.eclipse.jetty</groupId>
+    	<artifactId>jetty-server</artifactId>
+    	<version>9.4.6.v20170531</version>
+    </dependency>
   </dependencies>
 </project>
