--- a/game-common/pom.xml
+++ b/game-common/pom.xml
@@ -28,6 +28,11 @@
     	<version>${project.version}</version>
     </dependency>
     <dependency>
+    	<groupId>com.game</groupId>
+    	<artifactId>game-pb</artifactId>
+    	<version>${project.version}</version>
+    </dependency>
+    <dependency>
     	<groupId>io.netty</groupId>
     	<artifactId>netty-all</artifactId>
     	<version>4.1.6.Final</version>
@@ -36,11 +41,6 @@
     	<groupId>org.xerial.snappy</groupId>
     	<artifactId>snappy-java</artifactId>
     	<version>1.1.2.6</version>
-    </dependency>
-    <dependency>
-    	<groupId>com.google.protobuf</groupId>
-    	<artifactId>protobuf-java</artifactId>
-    	<version>3.4.0</version>
     </dependency>
     <dependency>
     	<groupId>dom4j</groupId>
