--- a/game-pb/pom.xml
+++ b/game-pb/pom.xml
@@ -56,7 +56,9 @@
 					<protocArtifact>com.google.protobuf:protoc:3.4.0:exe:${os.detected.classifier}</protocArtifact>
 					<pluginId>grpc-java</pluginId>
 					<pluginArtifact>io.grpc:protoc-gen-grpc-java:1.7.0:exe:${os.detected.classifier}</pluginArtifact>
-					<protoSourceRoot>src/main/java/resources</protoSourceRoot>
+					<outputDirectory>${basedir}/src/main/java</outputDirectory>
+					<clearOutputDirectory>false</clearOutputDirectory>
+					<protoSourceRoot>pb</protoSourceRoot>
 				</configuration>
 				<executions>
 					<execution>
