id绑定线程，修改协议

--- a/game-common/src/main/resources/config.properties
+++ b/game-common/src/main/resources/config.properties
@@ -9,11 +9,13 @@ netty.sndbuf=32768
 
 xml.path=Resource
 
-# every player a queue
+# every player a queue @Deprecated
 message.multi=1
 
-# all player a queue
-message.single=5
+# a queue
+message.single=1
+# message pool num
+message.pool=5
 
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/db1
