--- a/game-pb/pom.xml
+++ b/game-pb/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>grpc-stub</artifactId>
 			<version>1.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.protobuf-java-format</groupId>
+			<artifactId>protobuf-java-format</artifactId>
+			<version>1.4</version>
+		</dependency>
   </dependencies>
   
   <build>
