--- a/game-common/pom.xml
+++ b/game-common/pom.xml
@@ -25,11 +25,6 @@
 		</dependency>
 		<dependency>
 			<groupId>com.game</groupId>
-			<artifactId>game-agent</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.game</groupId>
 			<artifactId>game-pb</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -94,6 +89,16 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
+		<dependency>
+    	<groupId>org.apache.logging.log4j</groupId>
+    	<artifactId>log4j-core</artifactId>
+    	<version>2.8.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.commons</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>1.3.2</version>
+    </dependency>
 
 	</dependencies>
 </project>
