--- a/game-pb/pom.xml
+++ b/game-pb/pom.xml
@@ -52,6 +52,7 @@
 				<version>1.5.0.Final</version>
 			</extension>
 		</extensions>
+		<pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.xolstice.maven.plugins</groupId>
@@ -75,6 +76,7 @@
 				</executions>
 			</plugin>
 		</plugins>
+		</pluginManagement>
 	</build>
   
 </project>
