--- a/game-common/conf/config.properties
+++ b/game-common/conf/config.properties
@@ -30,5 +30,5 @@ session.timeout=300000
 
 rpc.client.file=Rpc/rpcClient.xml
 
-game.login.handler=""
-game.login.cmd=""
+game.login.handler=com.game.common.server.handler.message.LoginHandler
+game.login.cmd=login
